# Regression_MLOps_e2e

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile.api  Dockerfile.streamlit  README.md  app.py  architecture_regression_mlops_e2e.html  mlflow_utils.py  orchestrator.py  pyproject.toml
.github/workflows/: cd-frontend.yml  cd.yml  ci.yml
components/data_ingestion/: MLproject  README.md  python_env.yaml  run.py
components/data_validation/: MLproject  README.md  run.py
components/evaluation/: MLproject  README.md  python_env.yaml  run.py
components/feature_engineering/: MLproject  README.md  python_env.yaml  run.py
components/preprocessing/: MLproject  README.md  python_env.yaml  run.py
components/registry/: MLproject  README.md  python_env.yaml  run.py
components/training/: MLproject  README.md  python_env.yaml  run.py
components/tuning/: MLproject  README.md  python_env.yaml  run.py
docs/: FASTAPI_overview.md  MLOps_Regression_e2e_v1.md  Weight_&_Biases.md  controle_custos_aws.md  engineering_review_and_deployment_plan.md  roteiro_deploy_aws.md  testando_api_e_frontend.md  wandb_project_snapshot.md
infra/aws/: budget-monthly-10usd.json  budget-notification-80pct.json  ecr-lifecycle-keep-last-5.json  task-definition.cd.json  (+5 more)
pipelines/: data_pipeline.py  feature_pipeline.py  inference_pipeline.py  machine_learning_pipeline.py  training_pipeline.py  tuning_pipeline.py
scripts/: aws_cost_last_7_days.sh  aws_recreate_demo_infra.sh  aws_start_services.sh  aws_status.sh  aws_stop_services.sh  aws_teardown_demo_infra.sh
src/: config.py  logging_config.py
tests/: conftest.py  test_api.py  test_feature_engineering.py  test_load_data.py  test_machine_learning_pipeline.py  test_predict.py  test_preprocess_data.py  test_split_data.py  test_train_model.py  test_tune_model.py
(+25 files in other folders)
